added ui: /user/profile, api: PATCH /auth/me
